finish grpc gateway testing
